--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -16,6 +16,7 @@
 
 body {
     font-family: Fira Sans, Helvetica Neue, Helvetica, Arial, sans-serif;
+    background-color: #eee;
 }
 
 h1 {
@@ -26,7 +27,11 @@ h1 strong {
 }
 
 .site-header {
+    padding: 5px 0;
     font-size: 2rem;
+    line-height: 40px;
+    img { width: 3  0px; height: 30px; }
+    background-color: #333;
 }
 
 .site-nav-link {
@@ -55,7 +60,7 @@ h1 strong {
 }
 
 .page-content {
-    padding-top: 40px;
+    // padding-top: 40px;
 }
 
 .container {
@@ -63,7 +68,7 @@ h1 strong {
 }
 
 .tile {
-    height: 155px;
+    height: 130px;
     margin: 10px 0;
     padding: 10px;
     text-align: center;
