tweak style and add basic footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,5 @@
 <footer class="site-footer">
-
-  Pull request welcome.
+  <div class="container">
+    <div style="text-align: center;">2016 - Are we learning yet?</div>
+  </div>
 </footer>
