cleanup a bunch of styles

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
 
     {% if page.url != '/' %}
       <a class="site-title" href="{{ site.baseurl }}/">
-        <img src="/images/rust-9000.png">
+        <img src="/images/rust-9000.png" style="vertical-align:middle;">
         {{ site.title }}
       </a>
     {% else %}
