--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,14 +3,12 @@
 
   {% include head.html %}
 
-  <body>
+  <body class="body">
 
     {% include header.html %}
 
     <div class="page-content">
-      <div class="wrapper">
-        {{ content }}
-      </div>
+      {{ content }}
     </div>
 
     {% include footer.html %}
