--- a/css/main.scss
+++ b/css/main.scss
@@ -10,6 +10,9 @@ $mono-font-family: "Source Code Pro", Menlo, Monaco, Consolas, "DejaVu Sans Mono
 $text-color:        #777;
 $primary-color:	    #b33;
 
+$status-green:  #81f300;
+$status-yellow: #ffee40;
+$status-red:    #ff3e21;
 
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import "milligram",
