--- a/_layouts/crates.html
+++ b/_layouts/crates.html
@@ -23,4 +23,16 @@ layout: default
     </div>
   {% endfor %}
 
+  <div class="followup">
+    Do you know of a crate that is missing?
+    <a href="https://github.com/anowell/are-we-learning-yet/issues/new?title=Add+crate:+CRATE&body=Please+add+crate+to+category:+{{ page.title }}" target="_blank">
+      File an issue
+    </a>
+    or submit a PR.
+    <br>
+    Looking for something you didn't find? Try asking
+    <a href="/irc/">on IRC</a>.
+  </div>
+
+
 </article>
