Stub out more content

--- a/_layouts/crates.html
+++ b/_layouts/crates.html
@@ -26,9 +26,9 @@ layout: default
   <div class="followup">
     Do you know of a crate that is missing?
     <a href="https://github.com/anowell/are-we-learning-yet/issues/new?title=Add+crate:+CRATE&body=Please+add+crate+to+category:+{{ page.title }}" target="_blank">
-      File an issue
+      Create an issue
     </a>
-    or submit a PR.
+    or a PR.
     <br>
     Looking for something you didn't find? Try asking
     <a href="/irc/">on IRC</a>.
