Generate richer crate data

--- a/_layouts/crates.html
+++ b/_layouts/crates.html
@@ -11,15 +11,37 @@ layout: default
     {{ content }}
   </div>
 
-  {% assign crates = site.data.crates | where_exp:"item", "item.tags contains page.crate_tag" %}
+  {% assign crates = site.data.crates_generated | where_exp:"item", "item.topics contains page.crate_tag" | sort: 'stargazers_count' | reverse %}
   {% for crate in crates %}
     <div>
       <hr>
-      <h3>{{crate.name}}</h3>
-      <a href="https://crates.io/crates/{{crate.name}}"><img src="https://img.shields.io/crates/v/{{crate.name}}.svg?maxAge=2592000"></a>
-      <a href="https://crates.io/crates/{{crate.name}}"><img src="https://img.shields.io/crates/d/{{crate.name}}.svg?maxAge=2592000"></a>
-      <a href="https://github.com/{{crate.github}}"><img src="https://img.shields.io/github/stars/{{crate.github}}.svg?style=social&label=Star&maxAge=2592000"></a>
-      <p>{{crate.summary}}</p>
+      <h3>{%if crate.name %}{{crate.name}}{% else %}{{crate.github}}{% endif %}</h3>
+      {%if crate.name %}
+        <a href="https://crates.io/crates/{{crate.name}}"><img src="https://img.shields.io/crates/v/{{crate.name}}.svg?maxAge=2592000"></a>
+        <a href="https://crates.io/crates/{{crate.name}}"><img src="https://img.shields.io/crates/d/{{crate.name}}.svg?maxAge=2592000"></a>
+      {% endif %}
+      {%if crate.github %}
+        <a href="https://github.com/{{crate.github}}"><img src="https://img.shields.io/github/stars/{{crate.github}}.svg?style=social&label=Star&maxAge=2592000"></a>
+      {% endif %}
+      {%if crate.documentation %}
+        <a href="{{crate.documentation}}" style="font-size: small; vertical-align:middle;">[docs]</a>
+      {% endif %}
+      <p>{{crate.description}}</p>
+      <div style="font-size: small;">
+        {%if crate.github %}
+          <b>Last Commit</b>: {{crate.last_commit | date: "%d %b %Y"}}
+          &nbsp;&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;&nbsp;&nbsp;
+        {% endif %}
+        {%if crate.name %}
+          <b>Last Published</b>: {{crate.updated_at | date: "%d %b %Y"}}
+          &nbsp;&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;&nbsp;&nbsp;
+        {% endif %}
+        {%if crate.github %}
+          <b>Contributors</b>: {{crate.contributor_count}}
+          &nbsp;&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;&nbsp;&nbsp;
+          <b>Open Issues</b>: {{crate.open_issues_count}}
+        {% endif %}
+      </div>
     </div>
   {% endfor %}
 
