Add EANT2 to crates (resolve #5)

--- a/_layouts/crates.html
+++ b/_layouts/crates.html
@@ -40,7 +40,7 @@ layout: default
 
       <div style="font-size: small;">
 
-        {%if crate.name %}
+        {%if crate.license %}
           <b>License</b>: {{crate.license}}
           &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         {% endif %}
