--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -31,15 +31,6 @@ a:active {
   color: darken($primary-color, 15%);
 }
 
-
-.github-fork-ribbon {
-    &:before, &:after {
-        background-color: #eee;
-        border-color: #333;
-    }
-    &:after { color: #333; }
-}
-
 h1 {
     padding-top: 20px;
     letter-spacing: -0.2rem;
@@ -58,30 +49,47 @@ b, strong {
 
 .site-header {
     padding: 5px 0;
-    font-size: 2rem;
+    font-size: 20px;
     line-height: 24px;
-    img { width: 24px; height: 24px; }
     background-color: #333;
+    img {
+        width: 24px;
+        height: 24px;
+        margin-top: -3px;
+    }
 }
 
 .site-footer {
-    margin: 20px 0;
+    margin: 10px 0 0px;
 }
 
 .site-nav-link {
   padding-left: 20px;
 }
-.site-header {
-  font-size: 24px;
-}
 
 .hero {
-    padding-top: 40px;
-    padding-bottom: 40px;
+    position: relative;
+    padding-top: 60px;
+    padding-bottom: 60px;
     min-height: 360px;
     background-color: #333;
+    background-image:url('/images/gears.jpg');
     color: #ccc;
     margin-bottom: 0px;
+}
+
+.hero h3 {
+    margin-bottom: 20px;
+}
+
+.color-overlay {
+   position: absolute;
+   top: 0;
+   left: 0;
+   width: 100%;
+   height: 100%;
+   background-color: #282828; //darken(#b7410e, 28%);
+   opacity: 0.92;
 }
 
 .tldr-headline {
@@ -90,8 +98,9 @@ b, strong {
     font-weight: bold;
     text-align: center;
     line-height: 2.75rem;
+    padding-top: 20px;
     padding-bottom: 40px;
-    // background-color: #333;
+
 }
 
 .page-content {
@@ -104,7 +113,7 @@ b, strong {
 
 .section {
     padding-top: 60px;
-    padding-bottom: 40px;
+    padding-bottom: 60px;
 }
 
 .tiles {
@@ -125,10 +134,11 @@ b, strong {
     justify-content: center;
     border-width: 4px 1px 1px 1px;
     border-style: solid;
+    margin-bottom: 20px;
 }
 
 a:hover .tile {
-    background-color: #393939;
+    color: #ccc;
 }
 
 .green { color: $status-green; }
@@ -147,13 +157,27 @@ a:hover .tile {
     border-color: $status-red;
 }
 
+.post-content {
+    margin-bottom: 60px;
+}
+
 .followup {
-    margin-top: 50px;
+    margin-top: 60px;
+    margin-bottom: 20px;
     text-align: center;
     padding: 20px 0;
     border: 2px solid orange; /* TODO: using colors by name is basically never good design */
 }
 
+.github-corner {
+    position: absolute;
+    z-index: 100;
+}
+
+.crate-stat {
+    padding-right: 30px;
+    white-space: nowrap;
+}
 
 @media screen and (max-width: 47.9em) {
     .hide-xs { display: none; }
