--- a/css/main.scss
+++ b/css/main.scss
@@ -8,7 +8,7 @@ $base-font-family: Fira Sans, Helvetica Neue, Helvetica, Arial, sans-serif;
 $mono-font-family: "Source Code Pro", Menlo, Monaco, Consolas, "DejaVu Sans Mono", Inconsolata, monospace;
 
 $text-color:        #777;
-$primary-color:	    #b33;
+$primary-color:	    #b7410e;
 
 $status-green:  #81f300;
 $status-yellow: #ffee40;
