--- a/_layouts/crates.html
+++ b/_layouts/crates.html
@@ -59,7 +59,7 @@ layout: default
 
   <div class="followup">
     Do you know of a crate that is missing?
-    <a href="https://github.com/anowell/are-we-learning-yet/issues/new?title=Add+crate:+CRATE&body=Please+add+crate+to+category:+{{ page.title }}" target="_blank">
+    <a href="https://github.com/anowell/are-we-learning-yet/issues/new?title=Add+crate:+CRATE&body=Please+add+crate+to+category:+{{ page.title }}+%0A%0APro-tip%3a+a+quick+PR+to+_data/crates.yaml+often+gets+merged+quicker." target="_blank">
       Create an issue
     </a>
     or a PR.
