Fix footer date

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,7 +12,7 @@
       {% endfor %}
     </nav>
 
-    <div style="text-align: center; font-size: small;">2016 - Are we learning yet?</div>
+    <div style="text-align: center; font-size: small;">Are we learning yet? - Last updated: <a href="https://travis-ci.org/anowell/are-we-learning-yet">{{ site.time | date: '%Y-%m-%d'}}</a> </div>
 
   </div>
 </footer>
