Fix some HTML escaping problems
Previously on https://www.arewelearningyet.com/metaheuristics/:

    <title>Meta&amp;shy;heuristics</title>
               ^^^^^^^^^

    <img src="…/argmin.svg?style=social&label=Star&maxAge=2592000">
                                       ^          ^

    <a href="…&body=…category:+Meta&shy;heuristics+…" target="_blank">`
              ^                    ^^^^^

Signed-off-by: Anders Kaseorg <andersk@mit.edu>

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
       {% for page in pages %}
         {% if page.navindex && page.title %}
           <span style="padding: 15px;">
-            <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
+            <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{% if page.title_html %}{{ page.title_html }}{% else %}{{ page.title | escape }}{% endif %}</a>
           </span>
         {% endif %}
       {% endfor %}
