--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,7 +12,7 @@
       {% for page in pages %}
         {% if page.navindex && page.title %}
           <span class="site-nav-link">
-            <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
+            <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{% if page.title_html %}{{ page.title_html }}{% else %}{{ page.title | escape }}{% endif %}</a>
           </span>
         {% endif %}
       {% endfor %}
