--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,7 +4,7 @@ layout: default
 <article class="container post">
 
   <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
+    <h1 class="post-title">{% if page.title_html %}{{ page.title_html }}{% else %}{{ page.title | escape }}{% endif %}</h1>
   </header>
 
   <div class="post-content">
