--- a/_layouts/crates.html
+++ b/_layouts/crates.html
@@ -65,7 +65,7 @@ layout: default
     or a PR.
     <br>
     Looking for something you didn't find? Try asking
-    <a href="/irc/">on IRC</a>.
+    <a href="https://rust-ml.zulipchat.com">on Zulip chat</a>.
   </div>
 
 
