Remove last ruby (replace Jekyll with Cobalt.rs)

--- a/_includes/head.liquid
+++ b/_includes/head.liquid
@@ -6,10 +6,10 @@
   <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 
-  <link rel="stylesheet" href="{{ "/css/flexboxgrid.min.css" | prepend: site.baseurl }}">
-  <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="{{ "/css/flexboxgrid.min.css" | prepend: site.base_url }}">
+  <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.base_url }}">
 
-  <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
+  <link rel="canonical" href="{{ page.permalink | replace:'index.html','' | prepend: site.base_url }}">
 
   <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png">
   <link rel="icon" type="image/png" href="/images/favicon-32x32.png" sizes="32x32">
