--- a/_layouts/post.liquid
+++ b/_layouts/post.liquid
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: default.liquid
 ---
 <article class="container post" itemscope itemtype="http://schema.org/BlogPosting">
 
@@ -9,7 +9,7 @@ layout: default
   </header>
 
   <div class="post-content" itemprop="articleBody">
-    {{ content }}
+    {{ page.content }}
   </div>
 
 </article>
