--- a/_includes/footer.liquid
+++ b/_includes/footer.liquid
@@ -5,14 +5,7 @@
       <span style="padding: 15px;">
         <a class="page-link" href="https://rust-ml.zulipchat.com" target="_blank">Chat</a>
       </span>
-      {% assign pages = site.pages | sort: "navindex" %}
-      {% for page in pages %}
-        {% if page.navindex && page.title %}
-          <span style="padding: 15px;">
-            <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
-          </span>
-        {% endif %}
-      {% endfor %}
+      <span style="padding: 15px;"><a class="page-link" href="/about">About</a></span>
     </nav>
 
     <div style="text-align: center; font-size: small;">Are we learning yet? - Last updated: <a href="https://travis-ci.org/anowell/are-we-learning-yet/builds">{{ site.time | date: '%Y-%m-%d'}}</a> </div>
