--- a/_includes/head.liquid
+++ b/_includes/head.liquid
@@ -7,8 +7,8 @@
   <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 
-  <link rel="stylesheet" href="{{ "/css/flexboxgrid.min.css" | prepend: site.base_url }}">
-  <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.base_url }}">
+  <link rel="stylesheet" href="/css/flexboxgrid.min.css">
+  <link rel="stylesheet" href="/css/main.css">
 
   <link rel="canonical" href="{{ page.permalink | replace:'index.html','' | prepend: site.base_url }}">
 
